--- a/Mad.html
+++ b/Mad.html
@@ -63,12 +63,52 @@
   
 
 var foods = [
-  "Pizza Margherita",
-  "Spaghetti Bolognese",
-  "Sushi",
-  "Hamburgers",
-  "Chicken Alfredo"
+  "Pasta med pesto og kylling",
+  "Carbonara",
+
+  
+  "Margerita pizza ",
+  "Detroit-style pizza",
+  "New York-style pizza",
+  "Pizza med serrano, rucola, straciatella, grøn pesto",
+  "Kartoffelpizza med serrano crunch",
+  "Pizza med mortadella, pistacienødder, straciatella",
+  "Indbagt pizza med kødsovs og spaghetti",
+  "Chorizo-pizza",
+  "Prosciutto cotto-pizza",
+  "Nutella-banan pizza",
+
+  
+  "Baguette med mozzarella, pesto og prosciutto",
+  "Durum",
+  "Toast",
+  "Fransk hotdog",
+  "Kardemommeboller",
+  "Kyllingklapper med pesto, mayo og iceberg",
+  "Villads' kyllingeburger",
+  "Snackburger på koldhævede boller",
+  "Rugbrød med kartoffel og mayo",
+
+  
+  "Butterchicken med ris",
+  "Kyllingeoverlår med kyllingebouillonris",
+  "Ris i kokosmælk med grøntsager i soya",
+  "Grøn/rød curry med ris",
+  "Kylling i karry",
+
+  
+  "Flæskesteg med kartofler og brun sovs",
+  "Flødekartofler",
+  "Rodfrugter i ovn med kyllingelår",
+  "Pølsemix med bearnaise eller karry",
+  "Kartoffel med porrer i ovn",
+
+  
+  "Tarteletter",
+  "Porretærte",
+  "Nachos med ost og kylling"
 ];
+
 
 var currentIndex = 0;
 
