--- a/Mad.html
+++ b/Mad.html
@@ -175,53 +175,64 @@
         },
         "Indbagt pizza med kødsovs og spaghetti": {
           "Ingredienser": [
-            "Ingrediens 1",
-            "Ingrediens 2",
+            "Mozzerella",
+            "Kødsovs",
+            "Spaghetti",
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Trin 1",
-            "Trin 2",
+            "Rul pizzadejen ud på et meldrysset bord.",
+            "Fordel kødsovs, mozerella og kogt spaghetti over dejen.",
+            "Fold dejen sammen, så fyldet er indeni, og luk kanterne godt.",
+            "Bag pizzaen",
             // ... (tilføj flere trin efter behov)
           ]
         },
+
         "Chorizo": {
           "Ingredienser": [
-            "Ingrediens 1",
-            "Ingrediens 2",
+            "Mutti tomatsovs",
+            "Drænet frisk mozzerella",
+            "70g chorizo",
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Trin 1",
-            "Trin 2",
+            "Påfør tomatsovs og mozzerella på pizzadejen",
+            "Fordel chorizo på pizzaen",
             // ... (tilføj flere trin efter behov)
           ]
         },
+
         "Prosciutto cotto": {
           "Ingredienser": [
-            "Ingrediens 1",
-            "Ingrediens 2",
+            "Mutti tomatsovs",
+            "Frisk drænet mozzerella",
+            "70g prosciutto",
+            "Honning",
+            "Valnødder",
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Trin 1",
-            "Trin 2",
+            "Påfør tomatsovs og mozzerella, prosciutto",
+            "Tilsæt honing og valnødder efter bagning",
             // ... (tilføj flere trin efter behov)
           ]
         },
+
         "Nutella-bana": {
           "Ingredienser": [
-            "Ingrediens 1",
-            "Ingrediens 2",
+            "Nutella",
+            "Banan",
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Trin 1",
-            "Trin 2",
+            "Smør Nutella på pizzadejen.",
+            "Skær bananen i skiver og fordel dem over Nutella'en.",
+            "Bag pizza og server straks",
             // ... (tilføj flere trin efter behov)
           ]
         },
-      },
+      },  /* Her slutter denne kategori */
 
 
       /* Kategori: Pasta */
