--- a/Mad.html
+++ b/Mad.html
@@ -129,18 +129,34 @@
             // ... (tilføj flere trin efter behov)
           ]
         },
-        "Detroit-style": {
+        
+        "Detroit Pizza": {
           "Ingredienser": [
-            "Ingrediens 1",
-            "Ingrediens 2",
+            "280 gram hvedemel",
+            "200 ml vand",
+            "20 gram gær",
+            "1 tsk fint salt",
+            "1 stk tomatsauce",
+            "1 håndfuld kødfyld: pepperoni, skinke, bacon, etc.",
+            "100 gram mozzarella",
+            "200 gram emmenthaler, tern",
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Trin 1",
-            "Trin 2",
+            "Opløs gær i vandet og tilsæt hvedemel efterfulgt af salt - ælt det sammen på røremaskine i 2-3 minutter.",
+            "Sluk så for maskinen i 10 minutter, så dejen lige slapper af og absorberer mere mel.",
+            "Giv den så igen 2-3 minutter, indtil den let slipper kanterne.",
+            "Hæld den herefter i en oliesmurt skål og stil den til hævning. Hævningen kan du med fordel gøre inde i en slukket ovn med ovnlyset tændt. Lad det hæve i 60 minutter.",
+            "Smør din form med olivenolie. Skrab dejen ud i fadet og fold dejen indover sig selv et par gange for at stramme den op og slå luften ud af den.",
+            "Pres forsigtigt dejen ud til kanterne og dæk den med film. Stil den tilbage i den slukkede ovn med ovnlys og giv den en time mere.",
+            "Forvarm ovnen på 250 grader varmluft.",
+            "Fordel revet mozzarella på bunden efterfulgt af tern af emmenthaler.",
+            "Læg pepperoni på og smør striber af tomatsauce over den.",
+            "Sluk for varmluft, men lad ovnen forblive på 250 grader. Bag pizzaen i ovnen i ca. 20 minutter, indtil den er gyldenbrun.",
             // ... (tilføj flere trin efter behov)
           ]
         },
+
         "Kartoffel pizza med serrano crunch": {
           "Ingredienser": [
             "1/3 bøtte mascarpone",
