--- a/Mad.html
+++ b/Mad.html
@@ -502,31 +502,35 @@
           ]
         },
 
-        "Rød curry med ris": {
+        "Thai Red Curry med Ris": {
           "Ingredienser": [
-            "400 g kyllingebryst, skåret i tern",
-            "2 spiseskefulde rød currypasta",
+            "500 g kyllingelår, skåret i 1,5 cm tern",
             "400 ml kokosmælk",
-            "1 spiseskefuld fiskesauce",
-            "1 spiseskefuld sojasauce",
-            "1 spiseskefuld sukker",
-            "Bamboo Shoots (skud fra bambus), drænet og skåret i strimler",
-            "Aubergine, skåret i tern",
-            "Frisk koriander til pynt",
-            "Kogte ris til servering",
-            // ... (tilføj evt. flere ingredienser efter behov)
+            "200 g gulerødder, skåret i mundrette stykker",
+            "1 stor løg, skåret i tynde skiver",
+            "2 spiseskefulde rød karrypasta (kan tilpasses efter din krydderitolerance)",
+            "1-2 spiseskefulde friskrevet ingefær",
+            "3 fed hakket hvidløg",
+            "2 spiseskefulde fiskesauce",
+            "2 spiseskefulde sojasauce",
+            "1,5 spiseskefulde rørsukker",
+            "1 rød peberfrugt, skåret i strimler",
+            "2 forårsløg, skåret i skrå skiver",
+            "1 håndfuld frisk Thai basilikum",
+            "2 spiseskefulde vegetabilsk olie",
+            "Kogte jasminris til servering"
           ],
           "Fremgangsmåde": [
-            "Steg kyllingeternene i en stor gryde eller wok, indtil de er gyldne og gennemstegte.",
-            "Tilsæt rød currypasta og steg i et minut for at frigive aromaen.",
-            "Hæld kokosmælk i gryden og rør godt rundt.",
-            "Tilsæt fiskesauce, sojasauce og sukker. Rør igen og lad det simre i et par minutter.",
-            "Tilsæt bamboo shoots og aubergine. Lad det simre, indtil grøntsagerne er møre.",
-            "Smag til med ekstra fiskesauce, sojasauce eller sukker efter behov.",
-            "Serveres over kogte ris og drys frisk koriander over som pynt.",
-            // ... (tilføj evt. flere trin efter behov)
+            "I en stor pande, varm vegetabilsk olie over medium varme. Tilsæt rød karrypasta, hakket ingefær og hakket hvidløg. Sauter i et minut, indtil det bliver aromatisk.",
+            "Tilsæt kyllingetern og brun dem, indtil de er gyldne på alle sider.",
+            "Tilsæt skårede gulerødder og løg, og sauter i yderligere 2-3 minutter, indtil grøntsagerne bliver møre.",
+            "Hæld kokosmælk i panden og tilsæt fiskesauce, sojasauce og rørsukker. Rør godt rundt og lad det simre i ca. 10-15 minutter, indtil saucen tykner lidt.",
+            "Tilsæt strimlet rød peberfrugt, forårsløg og Thai basilikum, og kog i yderligere 2-3 minutter, indtil peberfrugten er møre.",
+            "Smag til med mere fiskesauce, sojasauce eller sukker efter behov.",
+            "Server straks over kogte jasminris."
           ]
         },
+
 
         "Kylling i Karry One Pot": {
           "Ingredienser": [
