--- a/Mad.html
+++ b/Mad.html
@@ -80,7 +80,7 @@
   <p id="text"></p>
   <button id="previousButton">Forrige</button>
   <button id="nextButton">Næste</button>
-   <button id="luckyButton">I'm feeling lucky</button>
+   <button id="luckyButton">Overrask mig!</button>
   <div id="recipeDetails" class="recipe-details"></div>
   
   <div class="recipe-display">
