--- a/Mad_test.html
+++ b/Mad_test.html
@@ -373,16 +373,30 @@
             "Rødløg",
             "Tomat",
             "Kebab",
-            "Durum dressing",
+            "1.5 dl mayonnaise",
+            "2 dl creme fraiche",
+            "0.5 dl vand (hvis dressingen er tyk)",
+            "1 fed hvidløg",
+            "1/4 tsk chili pulver",
+            "1/2 tsk stødt spidskommen",
+            "Salt",
+            "Peber",
+            "Evt 1/2 tsk stødt koriander",
+            "Evt 1 tsk æbleeddike"
             // ... (tilføj flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Tag en tortilla og læg den fladt.",
+            "Først laves durum dressingen:",
+            "Bland følgende ingredienser sammen i en skål: mayonnaise, creme fraiche, vand, hvidløg, chili pulver, stødt spidskommen, salt, peber, evt. stødt koriander og evt. æbleeddike.",
+            "Smag til med salt, peber og evt. koriander og æbleeddike.",
+            "Rør godt rundt, indtil dressingen er ensartet.",
+            "Varm tortiliaen.",
             "Fyld tortillaen med iceberg salat, rødløg, tomater, kebab og durum dressing.",
-            "Fold siderne af tortillaen ind og rul den stramt sammen.",
+            "Fold siderne af tortillaen ind og rul den stramt sammen."
             // ... (tilføj flere trin efter behov)
           ]
         },
+
 
         "Toast": {
           "Ingredienser": [
@@ -495,7 +509,7 @@
           ]
         },
 
-        
+
         "Butterchicken med ris": {
           "Ingredienser": [
             "500g kyllingebryst i tern",
@@ -646,6 +660,27 @@
       /* Kategori: Kartofler */
       "Kartoffler": {
 
+        "Sød Kartoffel med Kylling": {
+          "Ingredienser": [
+            "1 stor sødkartoffel",
+            "2 kyllingebrystfileter",
+            "2 spsk creme fraiche",
+            "1 fed hvidløg, presset",
+            "Saften fra 1/2 citron",
+            "Salt",
+            "Peber"
+          ],
+          "Fremgangsmåde": [
+            "Forvarm ovnen til 200 grader Celsius.",
+            "Bag sødkartoffelen på bagepladen i ovnen i 45-60 minutter.",
+            "Steg kyllingebrystfileterne på panden.",
+            "Bland creme fraiche med citronsaft, presset hvidløg, salt og peber.",
+            "Skær sødkartoffelen op og server med kyllingefileterne og citron-creme fraichen.",
+            "Server straks og nyd!"
+          ]
+        },
+
+
         "Flæskesteg med kartofler og brun sovs": {
           "Ingredienser": [
             "Flæseksteg",
@@ -750,9 +785,32 @@
       },  /* Her slutter denne kategori */
 
 
-      
+
       /* Kategori: Andet */
       "Andet": {
+
+        "Tærte med Skinke og Porre": {
+          "Ingredienser": [
+            "100 g hvedemel",
+            "70 g speltmel",
+            "100 g smør",
+            "1 stk æg",
+            "Salt",
+            "200 g skinkestrimler",
+            "5 stk æg",
+            "250 g hytteost",
+            "1 stk porre",
+            "Salt",
+            "Peber"
+          ],
+          "Fremgangsmåde": [
+            "Til tærtedejen: Bland hvedemel, speltmel, smør, æg og en knivspids salt. Saml dejen, og lad den hvile i 30 min.",
+            "Rul dejen ud, placer i et tærtefad, og forbag i ovnen i 10 min. ved 180 °C.",
+            "Pisk æg, hytteost, salt og peber sammen. Bland med skinke og porre.",
+            "Fordel fyldet på tærtebunden, og bag i ovnen i 25-30 min. ved 180 °C.",
+            "Lad tærten køle af i 5-10 min. inden servering."
+          ]
+        },
 
         "Mørbrad Paprikagryde": {
           "Ingredienser": [
