--- a/Mad_test.html
+++ b/Mad_test.html
@@ -579,23 +579,21 @@
             "400 g kyllingebryst, skåret i tern",
             "2 spiseskefulde grøn currypasta",
             "400 ml kokosmælk",
-            "1 spiseskefuld fiskesauce",
+            "1 teske fiskesauce",
             "1 spiseskefuld sojasauce",
             "1 spiseskefuld sukker",
-            "1 rød peberfrugt, skåret i strimler",
-            "1 gulerod, skåret i tynde skiver",
-            "Frisk basilikum til pynt",
+            "2 tomater, skåret i strimler",
+            "1 squah skåret i stave",
+            "2 dl hønsebouillon",
             "Kogte ris til servering",
             // ... (tilføj evt. flere ingredienser efter behov)
           ],
           "Fremgangsmåde": [
-            "Steg kyllingeternene i en stor gryde eller wok, indtil de er gyldne og gennemstegte.",
-            "Tilsæt grøn currypasta og steg i et minut for at frigive aromaen.",
-            "Hæld kokosmælk i gryden og rør godt rundt.",
-            "Tilsæt fiskesauce, sojasauce og sukker. Rør igen og lad det simre i et par minutter.",
-            "Tilsæt skiverne af rød peberfrugt og gulerod. Lad det simre, indtil grøntsagerne er møre.",
-            "Smag til med ekstra fiskesauce, sojasauce eller sukker efter behov.",
-            "Serveres over kogte ris og drys frisk basilikum over som pynt.",
+            "Hæld 1/3 af kokosmælken i panden og steg ind",
+            "Tilsæt grøn currypasta og steg sammen et par minutter",
+            "Tilføj kylling og steg et par minutter",
+            "Tilføj hønse bouillon og resten af koksmælken og lad det koge lidt",
+            "Tilsæt aubergine og tomat og kog et par minutter",
             // ... (tilføj evt. flere trin efter behov)
           ]
         },
