Update and rename Mad_test.html to Mad.html

--- a/Mad.html
+++ b/Mad.html
@@ -577,13 +577,13 @@
         "Grøn curry med ris": {
           "Ingredienser": [
             "400 g kyllingebryst, skåret i tern",
-            "2 spiseskefulde grøn currypasta",
+            "1 spiseskefulde grøn currypasta",
             "400 ml kokosmælk",
             "1 teske fiskesauce",
             "1 spiseskefuld sojasauce",
             "1 spiseskefuld sukker",
             "2 tomater, skåret i strimler",
-            "1 squah skåret i stave",
+            "1 squash skåret i stave",
             "2 dl hønsebouillon",
             "Kogte ris til servering",
             // ... (tilføj evt. flere ingredienser efter behov)
@@ -593,7 +593,7 @@
             "Tilsæt grøn currypasta og steg sammen et par minutter",
             "Tilføj kylling og steg et par minutter",
             "Tilføj hønse bouillon og resten af koksmælken og lad det koge lidt",
-            "Tilsæt aubergine og tomat og kog et par minutter",
+            "Tilsæt squash og tomat og kog et par minutter",
             // ... (tilføj evt. flere trin efter behov)
           ]
         },
