--- a/Mad.html
+++ b/Mad.html
@@ -593,7 +593,7 @@
             "Tilsæt grøn currypasta og steg sammen et par minutter",
             "Tilføj kylling og steg et par minutter",
             "Tilføj hønse bouillon og resten af koksmælken og lad det koge lidt",
-            "Tilsæt squash og tomat og kog et par minutter",
+            "Tilsæt squash og tomat og kog et par minutter. Smag til med soya, fiskesauce, sukker",
             // ... (tilføj evt. flere trin efter behov)
           ]
         },
