--- a/Mad.html
+++ b/Mad.html
@@ -487,7 +487,7 @@
         "Thailandsk Fried Rice Chicken": {
           "Ingredienser": [
             "2 kopper kogt jasminris, løse og afkølet",
-            "1 Bundt foråsløg",
+            "1 bundt foråsløg, snittet fint",
             "2 kyllingebrystfileter, skåret i små tern",
             "2 spsk vegetabilsk olie",
             "3 fed hvidløg, hakket",
