--- a/Mad.html
+++ b/Mad.html
@@ -105,22 +105,21 @@
       /* ------------Kategori: Pizza--------- */
       "Pizza": {
         
-        "Jons 48 timers pizzadej": {
+        "Jons 48 timers pizzadej - 4 deje": {
           "Ingredienser": [
-            "600 g Caputo pizzamel (fx den røde 'Cuoco')",
-            "415 g vand",
-            "1,5-2 g frisk gær eller 1/3 tsk tørgær",
+            "600g Caputo pizzamel (fx den røde 'Cuoco')",
+            "415g vand",
+            "1,5-2g frisk gær eller 1/3 tsk tørgær",
             "16 g fint salt"
           ],
           "Fremgangsmåde": [
               "Opløs gær i vandet i en stor skål.",
               "Tilsæt mel og rør, til alt melet er fugtet.",
-              "Ælt dejen i 10-12 minutter på røremaskine eller i hånden. Tilsæt salt undervejs.",
+              "Ælt dejen i 10-12 minutter på røremaskine eller i hånden. Tilsæt salt efter nogle minutter.",
               "Fold dejen på køkkenbordet og lad den hvile i 20-30 minutter under en skål.",
               "Spænd dejen op til en fast kugle og læg den i en lufttæt beholder.",
               "Stil dejen i køleskabet i mindst 48 timer (kan holde 5-6 dage med Caputo-mel).",
               "3-5 timer før brug: Tag dejen ud, vej 250-275 g pr. pizzakugle, spænd dem op, og lad dem hvile i en lufttæt beholder ved stuetemperatur.",
-              "Rul dejen ud, forbered tomatsauce og toppings, og bag pizzaerne.",
             ]
           },
 
