--- a/Mad.html
+++ b/Mad.html
@@ -108,7 +108,7 @@
         "Jons 48 timers pizzadej - 4 deje": {
           "Ingredienser": [
             "600g Caputo pizzamel (fx den røde 'Cuoco')",
-            "415g vand",
+            "415g kold vand",
             "1,5-2g frisk gær eller 1/3 tsk tørgær",
             "16 g fint salt"
           ],
