--- a/Mad.html
+++ b/Mad.html
@@ -677,6 +677,22 @@
       /* Kategori: Kartofler */
       "Kartoffler": {
 
+        "Umuts flæskesteg": {
+          "Ingredienser": [
+            "Flæskesteg med svær",
+            "Kogende vand",
+            "Salt"
+          ],
+          "Fremgangsmåde": [
+            "Placer sværen nedad og dæk den med kogende vand. Forvarm ovnen til 200 grader varmluft.",
+            "Lad sværen stå i kogende vand i 20 minutter.",
+            "Placer sølvpapir under stegen for at sikre, at den står lige. Rids sværen uden at ramme kødet, og gnid en god mængde salt mellem sværene.",
+            "Bag stegen i cirka 1,5-2 timer ved 200 grader varmluft, indtil kernetemperaturen er 62 grader (cirka 1 time for en 1,5 kg kamsteg).",
+            "For sprødere svær kan temperaturen hæves til 225-250 grader i de sidste minutter af bagetiden.",
+            "Lad stegen trække i fri luft i 10-15 minutter inden servering."
+          ]
+        },
+        
         "Sød Kartoffel med Kylling": {
           "Ingredienser": [
             "1 stor sødkartoffel",
