--- a/Mad.html
+++ b/Mad.html
@@ -679,14 +679,12 @@
 
         "Umuts flæskesteg": {
           "Ingredienser": [
-            "Flæskesteg med svær",
-            "Kogende vand",
-            "Salt"
+            "Ca. 1.5kg kamsteg med svær",
           ],
           "Fremgangsmåde": [
-            "Placer sværen nedad og dæk den med kogende vand. Forvarm ovnen til 200 grader varmluft.",
-            "Lad sværen stå i kogende vand i 20 minutter.",
-            "Placer sølvpapir under stegen for at sikre, at den står lige. Rids sværen uden at ramme kødet, og gnid en god mængde salt mellem sværene.",
+            "Forvarm ovnen til 200 grader varmluft. Placer sværen nedad i det ilfaste fad og dæk den med kogende vand.",
+            "Kom den i ovnen i 20 minutter.",
+            "Vend nu stegen med sværene opad. Placer sølvpapir under stegen for at sikre, at den står lige. Rids sværen uden at ramme kødet, og gnid en god mængde salt mellem sværene.",
             "Bag stegen i cirka 1,5-2 timer ved 200 grader varmluft, indtil kernetemperaturen er 62 grader (cirka 1 time for en 1,5 kg kamsteg).",
             "For sprødere svær kan temperaturen hæves til 225-250 grader i de sidste minutter af bagetiden.",
             "Lad stegen trække i fri luft i 10-15 minutter inden servering."
