--- a/Mad.html
+++ b/Mad.html
@@ -680,6 +680,7 @@
         "Umuts flæskesteg": {
           "Ingredienser": [
             "Ca. 1.5kg kamsteg med svær",
+            "Salt"
           ],
           "Fremgangsmåde": [
             "Forvarm ovnen til 200 grader varmluft. Placer sværen nedad i det ilfaste fad og dæk den med kogende vand.",
@@ -820,6 +821,29 @@
       /* Kategori: Andet */
       "Andet": {
 
+       "Den bedste durum dressing": {
+          "Ingredienser": [
+            "1.5 dl mayonnaise",
+            "2 dl creme fraiche",
+            "0.5 dl vand (valgfrit, hvis dressingen er for tyk)",
+            "1 fed hvidløg",
+            "1/4 tsk chili pulver",
+            "1/2 tsk stødt spidskommen",
+            "Salt",
+            "Peber",
+            "Evt. 1/2 tsk stødt koriander",
+            "Evt. 1 tsk æbleeddike"
+          ],
+          "Fremgangsmåde": [
+            "Bland mayonnaise og creme fraiche i en skål.",
+            "Tilsæt vand, hvis dressingen er for tyk.",
+            "Pres hvidløget og rør det i blandingen.",
+            "Tilsæt chili pulver, stødt spidskommen, salt og peber.",
+            "Tilføj evt. stødt koriander og æbleeddike for ekstra smag.",
+            "Rør alle ingredienser godt sammen og smag til."
+          ]
+        },
+        
         "Tærte med Skinke og Porre": {
           "Ingredienser": [
             "100 g hvedemel",
