--- a/Mad.html
+++ b/Mad.html
@@ -820,7 +820,27 @@
 
       /* Kategori: Andet */
       "Andet": {
-
+        
+      "Hjemmelavet mayo": {
+        "Ingredienser": [
+          "1 æg",
+          "1 tsk salt",
+          "1 tsk Dijon sennep",
+          "1 tsk hvidvinseddike",
+          "Lidt citronsaft",
+          "2 dl olie",
+          "Salt og peber til smag"
+        ],
+        "Fremgangsmåde": [
+          "Slå ægget ud i et stavblenderglas.",
+          "Tilføj salt, Dijon sennep, hvidvinseddike og lidt citronsaft.",
+          "Hæld forsigtigt olien i, så den lægger sig ovenpå.",
+          "Sæt stavblenderen helt i bunden af glasset og tænd den.",
+          "Kør stavblenderen langsomt opad, indtil alt er emulgeret til en cremet mayo.",
+          "Smag til med salt, peber og citronsaft."
+        ]
+      },
+        
        "Den bedste durum dressing": {
           "Ingredienser": [
             "1.5 dl mayonnaise",
