--- a/Mad.html
+++ b/Mad.html
@@ -501,7 +501,25 @@
 
       /* Kategori: Ris */
       "Ris": {
-
+        
+      "Ris der ikke klistrer": {
+        "Ingredienser": [
+          "2 spsk olie",
+          "2 dl ris",
+          "Lidt salt",
+          "4 dl vand"
+        ],
+        "Fremgangsmåde": [
+          "Opvarm olie i en gryde.",
+          "Tilsæt ris og lidt salt, og sauter i 1 minut, eller indtil risene bliver hvide.",
+          "Hæld vand i gryden og bring det i kog.",
+          "Rør kort, så risene ikke klistrer til bunden.",
+          "Skru ned på middel varme (trin 5) og kog uden låg i 4 minutter.",
+          "Læg låg på gryden og kog i yderligere 10 minutter.",
+          "Sluk for varmen og lad risene hvile i 5 minutter inden servering."
+        ]
+      },
+  
         "Thailandsk Fried Rice Chicken": {
           "Ingredienser": [
             "2 kopper kogt jasminris, løse og afkølet",
