--- a/Mad.html
+++ b/Mad.html
@@ -519,6 +519,31 @@
           "Sluk for varmen og lad risene hvile i 5 minutter inden servering."
         ]
       },
+
+        "Den bedste kylling i karry": {
+          "Ingredienser": [
+            "2 stk. æbler",
+            "3 stk. gulerødder",
+            "0.5 stk. løg",
+            "1 fed hvidløg",
+            "500 g kyllingebryst",
+            "1-2 spsk olie",
+            "3 tsk karry",
+            "2 spsk hvedemel",
+            "1 liter vand",
+            "1 stk. hønsebouillonterning",
+            "0.5 l mælk"
+          ],
+          "Fremgangsmåde": [
+            "Skræl æblerne og skær dem i tern. Riv gulerødderne og snit løget fint. Hak hvidløget. Skær kyllingen i strimler.",
+            "Varm olie i en gryde eller wok, og tilsæt karryen. Steg kyllingen godt igennem under omrøring.",
+            "Tilsæt æbler, gulerødder, løg og hvidløg, og svits det godt igennem.",
+            "Rør hvedemel i og tilsæt derefter vand og bouillonterningen. Lad det koge igennem.",
+            "Tilsæt mælk og smag til med salt, peber og evt. ekstra karry.",
+            "Lad retten simre i ca. 20 minutter.",
+            "Server retten med ris eller flutes og drys evt. med kokos."
+          ]
+        },
   
         "Thailandsk Fried Rice Chicken": {
           "Ingredienser": [
