--- a/Mad.html
+++ b/Mad.html
@@ -104,8 +104,31 @@
 
       /* ------------Kategori: Pizza--------- */
       "Pizza": {
+
+      "Jons håndæltede 48 timers pizzadej - 5 deje": {
+        "Ingredienser": [
+          "500 g vand",
+          "800 g rød Caputo mel",
+          "1/3 tsk tørgær eller 2-2.5 g frisk gær",
+          "20 g fint salt"
+        ],
+        "Fremgangsmåde": [
+          "Hæld vand i en skål og opløs saltet i vandet.",
+          "Tilsæt 2 håndfulde mel til vandet og rør med fingrene, indtil det er opløst.",
+          "Tilsæt gæren og rør den ud i blandingen.",
+          "Tilsæt 2-3 håndfulde mel og fold dejen i skålen med fingrene for at ælte luft i.",
+          "Tilsæt yderligere 1 håndfuld mel og fortsæt med at ælte, indtil dejen er fast nok til at flytte til bordet.",
+          "Ælt resten af melet ind i dejen på bordet.",
+          "Ælt dejen med metoden: 4x skub, vend 90°, 4x skub, vend 90°, gentaget i 10 minutter.",
+          "Stram dejen op til en kugle, dæk med en skål og lad hvile i 20-30 minutter.",
+          "Kontroller, at konsistensen er elastisk som modellervoks/tyggegummi, og stram dejen op igen.",
+          "Læg dejen i en lufttæt beholder og opbevar på køl i 2 dage for optimal smag. Alternativt, hvis du springer kølingen over, kan dejen hvile i 30 minutter, opdeles i 5 kugler og hæve i en lufttæt beholder i 8-24 timer.",
+          "Del dejen i 5 lige store klumper (ca. 250 g hver) og bol dem op til kugler.",
+          "Lad kuglerne hæve i mindst 3-5 timer i en lufttæt beholder ved stuetemperatur."
+        ]
+      },
         
-        "Jons 48 timers pizzadej - 4 deje": {
+        "Jons 48 timers pizzadej på røremaskine - 4 deje": {
           "Ingredienser": [
             "600g Caputo pizzamel (fx den røde 'Cuoco')",
             "415g kold vand",
@@ -115,7 +138,7 @@
           "Fremgangsmåde": [
               "Opløs gær i vandet i en stor skål.",
               "Tilsæt mel og rør, til alt melet er fugtet.",
-              "Ælt dejen i 10-12 minutter på røremaskine eller i hånden. Tilsæt salt efter nogle minutter.",
+              "Ælt dejen i 10-12 minutter på røremaskine (hjælp med håndæltning hvis nødvendigt). Tilsæt salt nogle minutter før færdigæltet.",
               "Fold dejen på køkkenbordet og lad den hvile i 20-30 minutter under en skål.",
               "Spænd dejen op til en fast kugle og læg den i en lufttæt beholder.",
               "Stil dejen i køleskabet i mindst 48 timer (kan holde 5-6 dage med Caputo-mel).",
