--- a/Mad.html
+++ b/Mad.html
@@ -335,8 +335,65 @@
       },     /* Her slutter denne kategori */
 
       /* Kategori: Brød */
-      "Retter med brød": {
+      "Retter med brød og lign.": {
 
+        
+        "Tarteletter med høns i asparges": {
+          "Ingredienser": [
+            "500 g hønsekød",
+            "Salt og peber efter smag",
+            "400 g asparges på dåse",
+            "3 dl vand",
+            "1 stk hønsebouillonterning",
+            "1,5 dl mælk",
+            "30 g smør",
+            "3 spsk hvedemel",
+            "10 stk tarteletter",
+            "0,5 bundt frisk persille"
+          ],
+          "Fremgangsmåde": [
+            "Opløs bouillonterning i kogende vand.",
+            "Smelt smør i en gryde. Når smørret er smeltet, tilsæt hvedemel. Pisk det hele godt sammen, så du får en 'melbolle'.",
+            "Tilsæt nu det varme bouillonvand lidt efter lidt, imens der piskes. Fortsæt sådan, indtil alt bouillonvandet er tilsat.",
+            "Tilsæt herefter aspargesvand (vandet fra dine asparges) samt mælk/fløde, indtil det har den rette konsistens.",
+            "Tilsæt nu de hønsekøddet samt aspargesnitterne fra dåsen.",
+            "Smag til sidst til med salt og peber.",
+            "Er saucen for tynd, kan du lave en jævning af mel og vand og tilsætte det for at tykne saucen. Du laver en jævning af lidt hvedemel, som piskes op i vand. Tilsæt lidt jævning af gangen, indtil du har den ønskede konsistens.",
+            "Tarteletterne lunes i ovnen.",
+            "Server de lune tarteletter med fyldet og evt. agurk/tomat og frisk persille."
+          ]
+        },
+
+        "Porretærte": {
+          "Ingredienser": [
+            "Dej:",
+            "250 g mel",
+            "125 g koldt smør",
+            "1 æg",
+            "1 spsk koldt vand",
+            "Fyld:",
+            "500 g porrer",
+            "Smør til stegning",
+            "Salt og peber efter smag",
+            "3 æg",
+            "2 dl mælk",
+            "100 g revet ost",
+            "Evt. frisk rosmarin eller timian til smag"
+          ],
+          "Fremgangsmåde": [
+            "Forvarm ovnen til 200 grader Celsius.",
+            "Lav dejen ved at smuldre smørret i melet. Tilsæt ægget og koldt vand. Ælt dejen hurtigt sammen, indtil den er ensartet. Pak dejen ind i film og lad den hvile i køleskabet i mindst 30 minutter.",
+            "Rul dejen ud og beklæd en tærteform med dejen. Prik bunden med en gaffel.",
+            "Forbag tærtebunden i ovnen i ca. 10 minutter, indtil den er let gylden.",
+            "Imens tærtebunden bager, rens porrerne og skær dem i tynde skiver. Steg porrerne i smør på panden, indtil de er bløde. Krydr med salt, peber og evt. frisk rosmarin eller timian.",
+            "Fordel de stegte porrer jævnt over den forbagte tærtebund.",
+            "Pisk æggene sammen med mælken. Tilsæt revet ost og rør godt rundt.",
+            "Hæld æggeblandingen over porrerne i tærteformen.",
+            "Bag porretærten i ovnen i ca. 25-30 minutter, indtil den er gylden og fast i midten.",
+            "Server porretærten varm og skåret i portioner."
+          ]
+        },
+        
          "Tærte med Skinke og Porre": {
           "Ingredienser": [
             "100 g hvedemel",
@@ -983,63 +1040,6 @@
             "Tilsæt cocktailpølser, og lad dem simre med i yderligere fem minutter under låg.",
             "Smag til med salt, friskkværnet peber, evt. mere paprika samt gastrik eller citronsaft.",
             "Server evt. med ris til."
-          ]
-        },
-
-
-        "Tarteletter med høns i asparges": {
-          "Ingredienser": [
-            "500 g hønsekød",
-            "Salt og peber efter smag",
-            "400 g asparges på dåse",
-            "3 dl vand",
-            "1 stk hønsebouillonterning",
-            "1,5 dl mælk",
-            "30 g smør",
-            "3 spsk hvedemel",
-            "10 stk tarteletter",
-            "0,5 bundt frisk persille"
-          ],
-          "Fremgangsmåde": [
-            "Opløs bouillonterning i kogende vand.",
-            "Smelt smør i en gryde. Når smørret er smeltet, tilsæt hvedemel. Pisk det hele godt sammen, så du får en 'melbolle'.",
-            "Tilsæt nu det varme bouillonvand lidt efter lidt, imens der piskes. Fortsæt sådan, indtil alt bouillonvandet er tilsat.",
-            "Tilsæt herefter aspargesvand (vandet fra dine asparges) samt mælk/fløde, indtil det har den rette konsistens.",
-            "Tilsæt nu de hønsekøddet samt aspargesnitterne fra dåsen.",
-            "Smag til sidst til med salt og peber.",
-            "Er saucen for tynd, kan du lave en jævning af mel og vand og tilsætte det for at tykne saucen. Du laver en jævning af lidt hvedemel, som piskes op i vand. Tilsæt lidt jævning af gangen, indtil du har den ønskede konsistens.",
-            "Tarteletterne lunes i ovnen.",
-            "Server de lune tarteletter med fyldet og evt. agurk/tomat og frisk persille."
-          ]
-        },
-
-        "Porretærte": {
-          "Ingredienser": [
-            "Dej:",
-            "250 g mel",
-            "125 g koldt smør",
-            "1 æg",
-            "1 spsk koldt vand",
-            "Fyld:",
-            "500 g porrer",
-            "Smør til stegning",
-            "Salt og peber efter smag",
-            "3 æg",
-            "2 dl mælk",
-            "100 g revet ost",
-            "Evt. frisk rosmarin eller timian til smag"
-          ],
-          "Fremgangsmåde": [
-            "Forvarm ovnen til 200 grader Celsius.",
-            "Lav dejen ved at smuldre smørret i melet. Tilsæt ægget og koldt vand. Ælt dejen hurtigt sammen, indtil den er ensartet. Pak dejen ind i film og lad den hvile i køleskabet i mindst 30 minutter.",
-            "Rul dejen ud og beklæd en tærteform med dejen. Prik bunden med en gaffel.",
-            "Forbag tærtebunden i ovnen i ca. 10 minutter, indtil den er let gylden.",
-            "Imens tærtebunden bager, rens porrerne og skær dem i tynde skiver. Steg porrerne i smør på panden, indtil de er bløde. Krydr med salt, peber og evt. frisk rosmarin eller timian.",
-            "Fordel de stegte porrer jævnt over den forbagte tærtebund.",
-            "Pisk æggene sammen med mælken. Tilsæt revet ost og rør godt rundt.",
-            "Hæld æggeblandingen over porrerne i tærteformen.",
-            "Bag porretærten i ovnen i ca. 25-30 minutter, indtil den er gylden og fast i midten.",
-            "Server porretærten varm og skåret i portioner."
           ]
         },
 
