--- a/Mad.html
+++ b/Mad.html
@@ -97,7 +97,7 @@
 
 
       /* Den blanke kasse */
-      //"": {},
+      "": {},
 
 
 
@@ -971,7 +971,31 @@
 
 
       /* Kategori: Andet */
-      "Andet": {
+      "Dressinger + andre retter": {
+
+      "Perfekt brun sovs": {
+        "Ingredienser": [
+          "20 g smør",
+          "3 spsk hvedemel",
+          "2 dl mælk",
+          "2 dl væske fra stegen  eller 1 oksebouillon (fra Lidl) opløst i 2 dl vand",
+          "1 dl kartoffelvand",
+          "Sovsekulør (efter behov)",
+          "1 teskefuld salt",
+          "Friskkværnet peber (efter smag)",
+          "Evt. 1 teskefuld sukker (kan hjælpe med at balancere smagen)"
+        ],
+        "Fremgangsmåde": [
+          "Smelt smørret i en gryde ved lav varme.",
+          "Tilsæt hvedemelet og pisk konstant for at undgå klumper. Lad det stege i 1-2 minutter, så melet får en let brun farve, hvilket giver dybde i smagen.",
+          "Tilsæt langsomt 2 dl mælk og pisk grundigt for at undgå klumper.",
+          "Tilsæt 2 dl væske fra stegen (eller bouillonvand) og 1 dl kartoffelvand. Pisk konstant, så sovsen bliver glat og ensartet.",
+          "Kog sovsen op og lad den simre i ca. 5-10 minutter for at lade smagene udvikle sig og sovsen tykne til den ønskede konsistens. Hvis den bliver for tyk, kan du tilsætte lidt ekstra væske (bouillon, kartoffelvand eller mælk).",
+          "Tilsæt sovsekulør for den ønskede farve. Husk, at lidt kulør går langt, så vær forsigtig med mængden.",
+          "Smag sovsen til med salt og friskkværnet peber. Hvis du vil have en ekstra dybde i smagen, kan du tilføje en lille teskefuld sukker.",
+          "Lad sovsen koge igennem i et par minutter for at sikre, at smagene er godt blandet. Juster konsistensen, hvis nødvendigt, ved at tilføje lidt mere væske."
+        ]
+      },
         
       "Hjemmelavet mayo": {
         "Ingredienser": [
