--- a/Mad.html
+++ b/Mad.html
@@ -97,7 +97,7 @@
 
 
       /* Den blanke kasse */
-      "": {"Skriv til Mads med forslag til retter"},
+      "": {},
 
 
 
@@ -338,31 +338,28 @@
       "Retter med brød og lign.": {
 
         
-        "Tarteletter med høns i asparges": {
-          "Ingredienser": [
-            "500 g hønsekød",
-            "Salt og peber efter smag",
-            "400 g asparges på dåse",
-            "3 dl vand",
-            "1 stk hønsebouillonterning",
-            "1,5 dl mælk",
-            "30 g smør",
-            "3 spsk hvedemel",
-            "10 stk tarteletter",
-            "0,5 bundt frisk persille"
-          ],
-          "Fremgangsmåde": [
-            "Opløs bouillonterning i kogende vand.",
-            "Smelt smør i en gryde. Når smørret er smeltet, tilsæt hvedemel. Pisk det hele godt sammen, så du får en 'melbolle'.",
-            "Tilsæt nu det varme bouillonvand lidt efter lidt, imens der piskes. Fortsæt sådan, indtil alt bouillonvandet er tilsat.",
-            "Tilsæt herefter aspargesvand (vandet fra dine asparges) samt mælk/fløde, indtil det har den rette konsistens.",
-            "Tilsæt nu de hønsekøddet samt aspargesnitterne fra dåsen.",
-            "Smag til sidst til med salt og peber.",
-            "Er saucen for tynd, kan du lave en jævning af mel og vand og tilsætte det for at tykne saucen. Du laver en jævning af lidt hvedemel, som piskes op i vand. Tilsæt lidt jævning af gangen, indtil du har den ønskede konsistens.",
-            "Tarteletterne lunes i ovnen.",
-            "Server de lune tarteletter med fyldet og evt. agurk/tomat og frisk persille."
-          ]
-        },
+      "De bedste tarteletter": {
+        "Ingredienser": [
+          "2 dåser aspargesvæde",
+          "3 dl fløde",
+          "4 dl hønsebouillon",
+          "50 g smør",
+          "4 spsk hvedemel",
+          "Salt",
+          "Peber",
+          "500 g hønse- eller kyllingekød",
+          "Asparges (fra dåserne)"
+        ],
+        "Fremgangsmåde": [
+          "Hæld aspargesvæden fra de 2 dåser i en gryde.",
+          "Tilsæt fløde og hønsebouillon og kog op.",
+          "Lav en smørbolle ved at smelte smørret i en separat gryde og tilsætte hvedemelet. Rør grundigt for at undgå klumper.",
+          "Tilsæt smørbollen til væsken i gryden og kog sovsen igennem i 5-10 minutter, mens du pisker godt for at få den ønskede konsistens.",
+          "Smag til med salt og peber.",
+          "Skær hønse- eller kyllingekødet i små stykker og tilsæt det sammen med aspargesene til sovsen. Kog op og lad retten simre, indtil kødet er opvarmet igennem.",
+          "Hæld fyldet i tarteletskaller og server."
+        ]
+      },
 
         "Porretærte": {
           "Ingredienser": [
